--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "type": "module",
   "dependencies": {
     "highlight.js": "^11.5.1",
+    "json-stable-stringify": "^1.0.1",
     "tailwindcss": "^3.1.4"
   }
 }
